--- a/.github/workflows/Selenium-Action.yaml
+++ b/.github/workflows/Selenium-Action.yaml
@@ -18,5 +18,14 @@ jobs:
       - name: Install Selenium
         run: pip install selenium
 
-      - name: Running the Python file
+      - name: Running the Firefox Test
         run: python3 Selenium_Firefox_Website_Test.py
+
+      - name: Running the Chrome Test
+        run: python3 Selenium_Chrome_Website_Test.py
+
+      - name: Running the Edge Test
+        run: python3 Selenium_Edge_Website_Test.py
+
+      - name: TEAM ROCKET!!!
+        run:  ./TeamRocket.sh
